--- a/custom_components/versatile_thermostat/translations/en.json
+++ b/custom_components/versatile_thermostat/translations/en.json
@@ -1,29 +1,127 @@
 {
-    "config": {
-        "abort": {
-            "already_configured": "Device is already configured"
-        },
-        "error": {
-            "cannot_connect": "Failed to connect",
-            "invalid_auth": "Invalid authentication",
-            "unknown": "Unexpected error"
-        },
-        "step": {
-            "user": {
-                "data": {
-                    "name": "Name",
-                    "heater_entity_id": "Heater entity id",
-                    "temperature_sensor_entity_id": "Temperature sensor entity id",
-                    "power_sensor_entity_id": "Power sensor entity id",
-                    "max_power_sensor_entity_id": "Max power sensor entity id",
-                    "window_sensor_entity_id": "Window sensor entity id",
-                    "motion_sensor_entity_id": "Motion sensor entity id",
-                    "device_power": "Device power (kW)",
-                    "cycle_min": "Cycle duration (min)",
-                    "proportional_function": "Function to use (atan is more aggressive)",
-                    "proportional_bias": "A bias to use in proportional algorithm"
-                }
-            }
+  "title": "Versatile Thermostat configuration",
+  "config": {
+    "flow_title": "Versatile Thermostat configuration",
+    "step": {
+      "user": {
+        "title": "Add new Versatile Thermostat2",
+        "description": "Main mandatory attributes",
+        "data": {
+          "name": "Name",
+          "heater_entity_id": "Heater entity id",
+          "temperature_sensor_entity_id": "Temperature sensor entity id",
+          "cycle_min": "Cycle duration (minutes)",
+          "proportional_function": "Function to use (atan is more aggressive)",
+          "proportional_bias": "A bias to use in proportional algorithm"
         }
+      },
+      "presets": {
+        "title": "Presets",
+        "description": "For each presets, give the target temperature",
+        "data": {
+          "eco_temp": "Temperature in Eco preset",
+          "away_temp": "Temperature in Away preset",
+          "comfort_temp": "Temperature in Comfort preset",
+          "boost_temp": "Temperature in Boost preset",
+          "power_temp": "Temperature in Power (overpowering) preset"
+        }
+      },
+      "window": {
+        "title": "Window management",
+        "description": "Open window management.\nLeave corresponding entity_id empty if not used.",
+        "data": {
+          "window_sensor_entity_id": "Window sensor entity id",
+          "window_delay": "Window delay (seconds)"
+        }
+      },
+      "motion": {
+        "title": "Motion sensor management",
+        "description": "Motion sensor management. Preset can switch automatically depending of a motion detection\nLeave corresponding entity_id empty if not used.\nmotion_preset and no_motion_preset should be set to the corresponding preset name",
+        "data": {
+          "motion_sensor_entity_id": "Motion sensor entity id",
+          "motion_delay": "Motion delay (seconds)",
+          "motion_preset": "Preset to use when motion is detected",
+          "no_motion_preset": "Preset to use when no motion is detected"
+        }
+      },
+      "power": {
+        "title": "Power management",
+        "description": "Power management attributes.\nGives the power and max power sensor pf your home.\nThen specify the power consumption of the heater when on.\nAll sensors and device power should have the same unit (kW or W).\nLeave corresponding entity_id empty if not used.",
+        "data": {
+          "power_sensor_entity_id": "Power sensor entity id",
+          "max_power_sensor_entity_id": "Max power sensor entity id",
+          "device_power": "Device power (kW)"
+        }
+      }
+    },
+    "error": {
+      "unknown": "Unexpected error",
+      "unknown_entity": "Unknown entity id"
+    },
+    "abort": {
+      "already_configured": "Device is already configured"
     }
+  },
+  "options": {
+    "flow_title": "Versatile Thermostat configuration",
+    "step": {
+      "user": {
+        "title": "Change a Versatile Thermostat",
+        "description": "Main mandatory attributes",
+        "data": {
+          "name": "Name",
+          "heater_entity_id": "Heater entity id",
+          "temperature_sensor_entity_id": "Temperature sensor entity id",
+          "cycle_min": "Cycle duration (minutes)",
+          "proportional_function": "Function to use in proportional algorithm (atan is more aggressive)",
+          "proportional_bias": "A bias to use in proportional algorithm"
+        }
+      },
+      "presets": {
+        "title": "Presets",
+        "description": "For each presets, give the target temperature",
+        "data": {
+          "eco_temp": "Temperature in Eco preset",
+          "away_temp": "Temperature in Away preset",
+          "comfort_temp": "Temperature in Comfort preset",
+          "boost_temp": "Temperature in Boost preset",
+          "power_temp": "Temperature in Power (overpowering) preset"
+        }
+      },
+      "window": {
+        "title": "Window management",
+        "description": "Open window management.\nLeave corresponding entity_id empty if not used.",
+        "data": {
+          "window_sensor_entity_id": "Window sensor entity id",
+          "window_delay": "Window delay (seconds)"
+        }
+      },
+      "motion": {
+        "title": "Motion sensor management",
+        "description": "Motion sensor management. Preset can switch automatically depending of a motion detection\nLeave corresponding entity_id empty if not used.\nmotion_preset and no_motion_preset should be set to the corresponding preset name",
+        "data": {
+          "motion_sensor_entity_id": "Motion sensor entity id",
+          "motion_delay": "Motion delay (seconds)",
+          "motion_preset": "Preset to use when motion is detected",
+          "no_motion_preset": "Preset to use when no motion is detected"
+        }
+      },
+      "power": {
+        "title": "Power management",
+        "description": "Power management attributes.\nGives the power and max power sensor pf your home.\nThen specify the power consumption of the heater when on.\nAll sensors and device power should have the same unit (kW or W).\nLeave corresponding entity_id empty if not used.",
+        "data": {
+          "power_sensor_entity_id": "Power sensor entity id",
+          "max_power_sensor_entity_id": "Max power sensor entity id",
+          "device_power": "Device power (kW)"
+        }
+      }
+    },
+    "error": {
+      "unknown": "Unexpected error",
+      "unknown_entity": "Unknown entity id"
+    },
+    "abort": {
+      "already_configured": "Device is already configured"
+    }
+  }
 }
