--- a/custom_components/versatile_thermostat/translations/fr.json
+++ b/custom_components/versatile_thermostat/translations/fr.json
@@ -11,8 +11,23 @@
           "heater_entity_id": "Radiateur entity id",
           "temperature_sensor_entity_id": "Température sensor entity id",
           "cycle_min": "Durée du cycle (minutes)",
-          "proportional_function": "Fonction de l'algorithm proportionnel à utiliser (atan est plus aggressive)",
+          "proportional_function": "Fonction de l'algorithm proportionnel à utiliser (linear est moins aggressive)"
+        }
+      },
+      "p": {
+        "title": "Proportional",
+        "description": "Attributs des algos Proportionnel",
+        "data": {
           "proportional_bias": "Un biais à utiliser dans l'algorithm proportionnel"
+        }
+      },
+      "tpi": {
+        "title": "TPI",
+        "description": "Attributs de l'algo Time Proportional Integral",
+        "data": {
+          "external_temperature_sensor_entity_id": "Temperature exterieure sensor entity id",
+          "tpi_coefc": "coeff_c : Coefficient à utiliser pour le delta de température interne",
+          "tpi_coeft": "coeff_t : Coefficient à utiliser pour le delta de température externe"
         }
       },
       "presets": {
@@ -66,15 +81,30 @@
     "flow_title": "Versatile Thermostat configuration",
     "step": {
       "user": {
-        "title": "Configuration d'un thermostat",
+        "title": "Ajout d'un nouveau thermostat",
         "description": "Principaux attributs obligatoires",
         "data": {
           "name": "Nom",
           "heater_entity_id": "Radiateur entity id",
           "temperature_sensor_entity_id": "Température sensor entity id",
           "cycle_min": "Durée du cycle (minutes)",
-          "proportional_function": "Fonction de l'algorithm proportionnel à utiliser (atan est plus aggressive)",
+          "proportional_function": "Fonction de l'algorithm proportionnel à utiliser (linear est moins aggressive)"
+        }
+      },
+      "p": {
+        "title": "Proportional",
+        "description": "Attributs des algos Proportionnel",
+        "data": {
           "proportional_bias": "Un biais à utiliser dans l'algorithm proportionnel"
+        }
+      },
+      "tpi": {
+        "title": "TPI",
+        "description": "Attributs de l'algo Time Proportional Integral",
+        "data": {
+          "external_temperature_sensor_entity_id": "Temperature exterieure sensor entity id",
+          "tpi_coefc": "coeff_c : Coefficient à utiliser pour le delta de température interne",
+          "tpi_coeft": "coeff_t : Coefficient à utiliser pour le delta de température externe"
         }
       },
       "presets": {
