Issue #12 - Cannot remove entity_id in configuration Issue #09 - Hide preset that are not configured Issue #04 - Add service to update the temperature of a preset Issue #02 - Limits the usable presets

--- a/custom_components/versatile_thermostat/translations/fr.json
+++ b/custom_components/versatile_thermostat/translations/fr.json
@@ -25,7 +25,7 @@
       },
       "presets": {
         "title": "Presets",
-        "description": "Pour chaque preset, donnez la température cible",
+        "description": "Pour chaque preset, donnez la température cible (0 pour ignorer le preset)",
         "data": {
           "eco_temp": "Température en preset Eco",
           "comfort_temp": "Température en preset Comfort",
@@ -104,7 +104,7 @@
       },
       "presets": {
         "title": "Presets",
-        "description": "Pour chaque preset, donnez la température cible",
+        "description": "Pour chaque preset, donnez la température cible (0 pour ignorer le preset)",
         "data": {
           "eco_temp": "Température en preset Eco",
           "comfort_temp": "Température en preset Comfort",
