--- a/custom_components/versatile_thermostat/translations/fr.json
+++ b/custom_components/versatile_thermostat/translations/fr.json
@@ -8,8 +8,6 @@
         "description": "Principaux attributs obligatoires",
         "data": {
           "name": "Nom",
-          "thermostat_over_switch": "Thermostat sur un switch",
-          "thermostat_over_climate": "Thermostat sur un autre thermostat",
           "temperature_sensor_entity_id": "Température sensor entity id",
           "external_temperature_sensor_entity_id": "Temperature exterieure sensor entity id",
           "cycle_min": "Durée du cycle (minutes)",
@@ -22,10 +20,13 @@
         }
       },
       "type": {
-        "heater_entity_id": "Radiateur entity id",
-        "proportional_function": "Algorithm à utiliser (Seul TPI est disponible pour l'instant)",
-        "cycle_min": "Durée du cycle (minutes)",
-        "climate_entity_id": "Thermostat sous-jacent entity id"
+        "title": "Entité liée",
+        "description": "Attributs de l'entité liée",
+        "data": {
+          "heater_entity_id": "Radiateur entity id",
+          "proportional_function": "Algorithme à utiliser (Seul TPI est disponible pour l'instant)",
+          "climate_entity_id": "Thermostat sous-jacent entity id"
+        }
       },
       "tpi": {
         "title": "TPI",
@@ -91,6 +92,14 @@
         }
       }
     },
+    "selectors": {
+      "thermostat_type": {
+        "options": {
+          "thermostat_over_switch": "Thermostat sur un switch",
+          "thermostat_over_climate": "Thermostat sur un autre thermostat"
+        }
+      }
+    },
     "error": {
       "unknown": "Erreur inattendue",
       "unknown_entity": "entity id inconnu"
@@ -121,10 +130,13 @@
         }
       },
       "type": {
-        "heater_entity_id": "Radiateur entity id",
-        "proportional_function": "Algorithm à utiliser (Seul TPI est disponible pour l'instant)",
-        "cycle_min": "Durée du cycle (minutes)",
-        "climate_entity_id": "Thermostat sous-jacent entity id"
+        "title": "Entité liée",
+        "description": "Attributs de l'entité liée",
+        "data": {
+          "heater_entity_id": "Radiateur entity id",
+          "proportional_function": "Algorithme à utiliser (Seul TPI est disponible pour l'instant)",
+          "climate_entity_id": "Thermostat sous-jacent entity id"
+        }
       },
       "tpi": {
         "title": "TPI",
@@ -187,6 +199,14 @@
         "data": {
           "minimal_activation_delay": "Délai en seondes en-dessous duquel l'équipement ne sera pas activé",
           "security_delay_min": "Délai maximal autorisé en minutes entre 2 mesures de températures. Au-dessus de ce délai, le thermostat se mettra en position éteinte de sécurité"
+        }
+      }
+    },
+    "selectors": {
+      "thermostat_type": {
+        "options": {
+          "thermostat_over_switch": "Thermostat sur un switch",
+          "thermostat_over_climate": "Thermostat sur un autre thermostat"
         }
       }
     },
