--- a/custom_components/versatile_thermostat/translations/fr.json
+++ b/custom_components/versatile_thermostat/translations/fr.json
@@ -202,7 +202,7 @@
       "already_configured": "Le device est déjà configuré"
     }
   },
-  "selectors": {
+  "selector": {
     "thermostat_type": {
       "options": {
         "thermostat_over_switch": "Thermostat sur un switch",
