--- a/custom_components/versatile_thermostat/translations/fr.json
+++ b/custom_components/versatile_thermostat/translations/fr.json
@@ -209,5 +209,17 @@
         "thermostat_over_climate": "Thermostat sur un autre thermostat"
       }
     }
+  },
+  "entity": {
+    "climate": {
+      "versatile_thermostat": {
+        "states_attributes": {
+          "preset_mode": {
+            "power": "Délestage",
+            "security": "Sécurité"
+          }
+        }
+      }
+    }
   }
 }
