--- a/custom_components/versatile_thermostat/translations/en.json
+++ b/custom_components/versatile_thermostat/translations/en.json
@@ -90,7 +90,8 @@
         "data": {
           "minimal_activation_delay": "Delay in secondes under which the equipment will not be activated",
           "security_delay_min": "Maximum allowed delay in minutes between two temperature mesures. Above this delay, the thermostat will turn to a sceurity off state",
-          "security_min_on_percent": "Minimal On-Percent value for security preset activation. Below this amount of on_percent the thermostat won't go into security preset"
+          "security_min_on_percent": "Minimal heating percent value for security preset activation. Below this amount of on_percent the thermostat won't go into security preset",
+          "security_default_on_percent": "The default heating percent value in security preset. Set to 0 to switch off heater in security present"
         }
       }
     },
@@ -192,7 +193,8 @@
         "data": {
           "minimal_activation_delay": "Delay in secondes under which the equipment will not be activated",
           "security_delay_min": "Maximum allowed delay in minutes between two temperature mesures. Above this delay, the thermostat will turn to a sceurity off state",
-          "security_min_on_percent": "Minimal On-Percent value for security preset activation. Below this amount of on_percent the thermostat won't go into security preset"
+          "security_min_on_percent": "Minimal heating percent value for security preset activation. Below this amount of on_percent the thermostat won't go into security preset",
+          "security_default_on_percent": "The default heating percent value in security preset. Set to 0 to switch off heater in security present"
         }
       }
     },
@@ -215,10 +217,13 @@
   "entity": {
     "climate": {
       "versatile_thermostat": {
-        "states_attributes": {
+        "state_attributes": {
           "preset_mode": {
-            "power": "Shedding",
-            "security": "Security"
+            "state": {
+              "power": "Shedding",
+              "security": "Security",
+              "none": "Manual"
+            }
           }
         }
       }
