Fix security modes corner cases

--- a/custom_components/versatile_thermostat/translations/fr.json
+++ b/custom_components/versatile_thermostat/translations/fr.json
@@ -228,5 +228,16 @@
         }
       }
     }
+  },
+  "state_attributes": {
+    "_": {
+      "preset_mode": {
+        "state": {
+          "power": "Délestage",
+          "security": "Sécurité",
+          "none": "Manuel"
+        }
+      }
+    }
   }
 }
