--- a/custom_components/versatile_thermostat/translations/fr.json
+++ b/custom_components/versatile_thermostat/translations/fr.json
@@ -51,13 +51,14 @@
         "description": "Coupe le radiateur si l'ouverture est ouverte.\nLaissez l'entity id vide si non utilisé.",
         "data": {
           "window_sensor_entity_id": "Détecteur d'ouverture (entity id)",
-          "window_delay": "Délai avant extinction (seconds)",
+          "window_delay": "Délai avant extinction (secondes)",
           "window_auto_open_threshold": "seuil haut de chute de température pour la détection automatique (en °/min)",
           "window_auto_close_threshold": "Seuil bas de chute de température pour la fin de détection automatique (en °/min)",
           "window_auto_max_duration": "Durée maximum d'une extinction automatique (en min)"
         },
         "data_description": {
           "window_sensor_entity_id": "Laissez vide si vous n'avez de détecteur",
+          "window_delay": "Le délai (en secondes) avant que le changement du détecteur soit pris en compte",
           "window_auto_open_threshold": "Valeur recommandée: entre 0.05 et 0.1. Laissez vide si vous n'utilisez pas la détection automatique",
           "window_auto_close_threshold": "Valeur recommandée: 0. Laissez vide si vous n'utilisez pas la détection automatique",
           "window_auto_max_duration": "Valeur recommandée: 60 (1 heure). Laissez vide si vous n'utilisez pas la détection automatique"
@@ -96,8 +97,14 @@
         "title": "Parameters avancés",
         "description": "Configuration des paramètres avancés. Laissez les valeurs par défaut si vous ne savez pas ce que vous faites.\nCes paramètres peuvent induire des mauvais comportements du thermostat.",
         "data": {
-          "minimal_activation_delay": "Délai en secondes en-dessous duquel l'équipement ne sera pas activé",
-          "security_delay_min": "Délai maximal autorisé en minutes entre 2 mesures de températures. Au-dessus de ce délai, le thermostat se mettra en position éteinte de sécurité",
+          "minimal_activation_delay": "Délai minimal d'activation",
+          "security_delay_min": "Délai maximal entre 2 mesures de températures",
+          "security_min_on_percent": "Pourcentage minimal de puissance",
+          "security_default_on_percent": "Pourcentage de puissance a utiliser en mode securité"
+        },
+        "data_description": {
+          "minimal_activation_delay": "Délai en seondes en-dessous duquel l'équipement ne sera pas activé",
+          "security_delay_min": "Délai maximal autorisé en minutes entre 2 mesures de températures. Au-dessus de ce délai, le thermostat se mettra en position de sécurité",
           "security_min_on_percent": "Seuil minimal de pourcentage de chauffage en-dessous duquel le préréglage sécurité ne sera jamais activé",
           "security_default_on_percent": "Valeur par défaut pour le pourcentage de chauffage en mode sécurité. Mettre 0 pour éteindre le radiateur en mode sécurité"
         }
@@ -161,20 +168,21 @@
         }
       },
       "window": {
-        "title": "[%key:component::versatile_thermostat::config::step::window::title%]",
-        "description": "[%key:component::versatile_thermostat::config::step::window::description%]",
+        "title": "Gestion d'une ouverture",
+        "description": "Coupe le radiateur si l'ouverture est ouverte.\nLaissez l'entity id vide si non utilisé.",
         "data": {
-          "window_sensor_entity_id": "[%key:component::versatile_thermostat::config::step::window::data::window_sensor_entity_id%]",
-          "window_delay": "[%key:component::versatile_thermostat::config::step::window::data::window_delay%]",
-          "window_auto_open_threshold": "[%key:component::versatile_thermostat::config::step::window::data::window_auto_open_threshold%]",
-          "window_auto_close_threshold": "[%key:component::versatile_thermostat::config::step::window::data::window_auto_close_threshold%]",
-          "window_auto_max_duration": "[%key:component::versatile_thermostat::config::step::window::data::window_auto_max_duration%]"
+          "window_sensor_entity_id": "Détecteur d'ouverture (entity id)",
+          "window_delay": "Délai avant extinction (secondes)",
+          "window_auto_open_threshold": "seuil haut de chute de température pour la détection automatique (en °/min)",
+          "window_auto_close_threshold": "Seuil bas de chute de température pour la fin de détection automatique (en °/min)",
+          "window_auto_max_duration": "Durée maximum d'une extinction automatique (en min)"
         },
         "data_description": {
-          "window_sensor_entity_id": "[%key:component::versatile_thermostat::config::step::window::data_description::window_sensor_entity_id%]",
-          "window_auto_open_threshold": "[%key:component::versatile_thermostat::config::step::window::data_description::window_auto_open_threshold%]",
-          "window_auto_close_threshold": "[%key:component::versatile_thermostat::config::step::window::data_description::window_auto_close_threshold%]",
-          "window_auto_max_duration": "[%key:component::versatile_thermostat::config::step::window::data_description::window_auto_max_duration%]"
+          "window_sensor_entity_id": "Laissez vide si vous n'avez de détecteur",
+          "window_delay": "Le délai (en secondes) avant que le changement du détecteur soit pris en compte",
+          "window_auto_open_threshold": "Valeur recommandée: entre 0.05 et 0.1. Laissez vide si vous n'utilisez pas la détection automatique",
+          "window_auto_close_threshold": "Valeur recommandée: 0. Laissez vide si vous n'utilisez pas la détection automatique",
+          "window_auto_max_duration": "Valeur recommandée: 60 (1 heure). Laissez vide si vous n'utilisez pas la détection automatique"
         }
       },
       "motion": {
@@ -210,20 +218,26 @@
         "title": "Parameters avancés",
         "description": "Configuration des paramètres avancés. Laissez les valeurs par défaut si vous ne savez pas ce que vous faites.\nCes paramètres peuvent induire des mauvais comportements du thermostat.",
         "data": {
+          "minimal_activation_delay": "Délai minimal d'activation",
+          "security_delay_min": "Délai maximal entre 2 mesures de températures",
+          "security_min_on_percent": "Pourcentage minimal de puissance",
+          "security_default_on_percent": "Pourcentage de puissance a utiliser en mode securité"
+        },
+        "data_description": {
           "minimal_activation_delay": "Délai en seondes en-dessous duquel l'équipement ne sera pas activé",
-          "security_delay_min": "Délai maximal autorisé en minutes entre 2 mesures de températures. Au-dessus de ce délai, le thermostat se mettra en position éteinte de sécurité",
+          "security_delay_min": "Délai maximal autorisé en minutes entre 2 mesures de températures. Au-dessus de ce délai, le thermostat se mettra en position de sécurité",
           "security_min_on_percent": "Seuil minimal de pourcentage de chauffage en-dessous duquel le préréglage sécurité ne sera jamais activé",
           "security_default_on_percent": "Valeur par défaut pour le pourcentage de chauffage en mode sécurité. Mettre 0 pour éteindre le radiateur en mode sécurité"
         }
       }
     },
     "error": {
-      "unknown": "[%key:component::versatile_thermostat::config::error::unknown%]",
-      "unknown_entity": "[%key:component::versatile_thermostat::config::error::unknown_entity%]",
-      "window_open_detection_method": "[%key:component::versatile_thermostat::config::error::window_open_detection_method%]"
+      "unknown": "Erreur inattendue",
+      "unknown_entity": "entity id inconnu",
+      "window_open_detection_method": "Une seule méthode de détection des ouvertures ouvertes doit être utilisée. Utilisez le détecteur d'ouverture ou les seuils de température mais pas les deux."
     },
     "abort": {
-      "already_configured": "[%key:component::versatile_thermostat::config::abort::already_configured%]"
+      "already_configured": "Le device est déjà configuré"
     }
   },
   "selector": {
